implement ErrorDTO to GlobalExceptionHandler